# ba

./: README.md  flake.nix  instrumentation_notes.md  notes.md
latex/: .gitignore  .latexmkrc  Makefile  abstract-de.tex  abstract.tex  appendix.tex  benchmarks.tex  conclusion.tex  coverpage.tex  framework.tex  glossary.tex  introduction.tex  main.tex  osm-thesis.sty  queue-evaluation.tex  queue-implementations.tex  queue_implementations.tex  refs.bib  results.tex  system-under-test.tex  test_setup.tex  tex-fmt.toml  thesis.tex  titlepage.tex
latex/figures/: queue-interface.tex  runner-class-code.tex  toml-bursty-65k.tex
latex/figures/plots/: eq-basic.tex  eq16k-bursty.tex  eq2k-bursty.tex
latex/plots/: eq-basic.tex  eq16k-basic.tex  eq2k-basic.tex  eq2k-bursty.tex  general.tex
notes/: instrumentation_notes.md  time_measurement.md
plots/: report_7bca0f3_2025-09-13_eq2k.md  report_bdf4473_2025-09-07.md
src/: .clang-format  .gitignore  CMakeLists.txt  README.md  basic.cpp  basic.ipynb  bursty.ipynb  default.toml  equeue_repro.toml  equeue_repro_2k.toml  ff_queue.hpp  generic_factory.h  isol_notes.md  main.cpp  run_tests.sh  runner.h  rx_tx_pair.h  test_mc_sync.cpp  test_mc_sync_plot.py  test_queue.sh  test_timestamp_methods.cpp  test_tsc_freq.cpp  todo.md  utils.h
src/analysis/: generate_plots.py  lib.py  main.md
src/hw_tests/: test_clock_gettime.cpp  test_constant_tsc.cpp  test_mc_sync.cpp  test_timestamp_methods.cpp  test_tsc_freq.cpp
src/jupyter/: basic.md  bursty.md  generate_plots.py  main.md  print_basic_stats.py
src/measurer/: abstract.h  fine_grained.h
src/queue_tests/: basic.cpp  bursty.cpp  bursty.h
src/queues/: abstract.h  b_queue.h  equeue.h  fast_forward.h  ff_queue.h  lamport.h  mc_ring_buffer.h
src/tools/: setup_cpuset.sh
src/waiter/: abstract.h  bursty.h  constant_rate.h  constant_wait.h  continuous.h
